--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Python stuff
+__pycache__/
+*.py[cod]
+*$py.class
+env
+
 # Prerequisites
 *.d
 
@@ -40,3 +46,6 @@ builds
 
 # Example run dir
 example-runs
+
+# Postprocessing subdirectories
+postproc/*/
