Ignore files related to the spack build.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,14 @@ builds
 
 # Example run dir
 example-runs
+
+# Python
+__pycache__
+
+# Spack
+spack-build-*/
+spack-build-*.txt
+spack-configure-args.txt
+spack/.spack-env
+spack/spack.lock
+spack/views
