--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -22,9 +22,15 @@ spack:
       providers:
         mpi: [mpich, openmpi]
   develop:
+    nektar:
+      path: ../../NESO/nektar
+      spec: nektar@master
     neso:
       path: ../../NESO
       spec: neso@working
+    neso-particles:
+      path: ../../NESO/neso-particles
+      spec: neso-particles@working
     neso-hw-impurity-transport:
       path: ../
       spec: neso-hw-impurity-transport@working
