--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -5,7 +5,7 @@
 spack:
   # add package specs to the `specs` list
   specs:
-  - neso-hw-impurity-transport%gcc
+  - neso-tokamak%gcc
   view:
     gcc-hipsycl:
       root: views/gcc-hipsycl
@@ -31,6 +31,6 @@ spack:
     neso-particles:
       path: ../NESO/neso-particles
       spec: neso-particles@working
-    neso-hw-impurity-transport:
+    neso-tokamak:
       path: ../
-      spec: neso-hw-impurity-transport@working
+      spec: neso-tokamak@working
