--- a/spack/neso-external-spack.yaml
+++ b/spack/neso-external-spack.yaml
@@ -31,6 +31,6 @@ spack:
     neso-particles:
       path: ../../NESO/neso-particles
       spec: neso-particles@working
-    neso-hw-impurity-transport:
+    neso-tokamak:
       path: ../
       spec: neso-tokamak@working
