--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -8,7 +8,7 @@ spack:
   - neso-tokamak%gcc
   view:
     gcc-hipsycl:
-      root: /home/jedge/NESO-Tokamak/spack/views/gcc-hipsycl
+      root: views/gcc-hipsycl
       select: ['%gcc']
       link_type: symlink
   concretizer:
