--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -6,9 +6,11 @@ spack:
   # add package specs to the `specs` list
   specs:
   - neso-tokamak%gcc
+  - py-numpy@1.26
+  - nektar@cyl
   view:
     gcc-hipsycl:
-      root: views/gcc-hipsycl
+      root: /home/jedge/NESO-Tokamak/spack/views/gcc-hipsycl
       select: ['%gcc']
       link_type: symlink
   concretizer:
@@ -23,8 +25,7 @@ spack:
         mpi: [mpich, openmpi]
   develop:
     nektar:
-      path: ../NESO/nektar
-      spec: nektar@master
+      spec: nektar@=cyl
     neso:
       path: ../NESO
       spec: neso@working
@@ -32,5 +33,4 @@ spack:
       path: ../NESO/neso-particles
       spec: neso-particles@working
     neso-tokamak:
-      path: ../
-      spec: neso-tokamak@working
+      spec: neso-tokamak@=working
