--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -33,4 +33,5 @@ spack:
       path: ../NESO/neso-particles
       spec: neso-particles@working
     neso-tokamak:
+      path: ..
       spec: neso-tokamak@=working
