--- a/spack/spack-internal.yaml
+++ b/spack/spack-internal.yaml
@@ -15,7 +15,7 @@ spack:
     unify: when_possible
   repos:
   - ./repo
-  - ../../NESO/NESO-Spack
+  - ../NESO/NESO-Spack
   - $spack/var/spack/repos/builtin
   packages:
     all:
@@ -23,14 +23,14 @@ spack:
         mpi: [mpich, openmpi]
   develop:
     nektar:
-      path: ../../NESO/nektar
+      path: ../NESO/nektar
       spec: nektar@master
     neso:
-      path: ../../NESO
+      path: ../NESO
       spec: neso@working
     neso-particles:
-      path: ../../NESO/neso-particles
+      path: ../NESO/neso-particles
       spec: neso-particles@working
     neso-tokamak:
       path: ../
-      spec: neso-tokamak@working
+      spec: neso-tokamak@=working
