Make gradphi auxiliary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SRC_FILES
 src/EquationSystems/TokamakSystem.cpp
 src/BoundaryConditions/TokamakBndCond.cpp
 src/BoundaryConditions/ObliqueBC.cpp
+src/BoundaryConditions/SheathBC.cpp
 )
 
 # ##############################################################################
