--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,10 @@ find_package(NESO-Particles REQUIRED)
 # Identify source files
 set(SRC_FILES
 src/EquationSystems/TokamakSystem.cpp
+src/EquationSystems/SingleDiffusiveField.cpp
+src/EquationSystems/DoubleDiffusiveField.cpp
+src/EquationSystems/AnomalousDiffusion.cpp
+src/EquationSystems/ElectrostaticTurbulence.cpp
 src/BoundaryConditions/TokamakBndCond.cpp
 src/BoundaryConditions/ObliqueBC.cpp
 src/BoundaryConditions/SheathBC.cpp
