updated CMakeLists.txt to use NESO-Particles interface target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 # ##############################################################################
 
 find_package(NESO REQUIRED)
+find_package(NESO-Particles REQUIRED)
 
 # Identify source files
 set(SRC_FILES
@@ -38,10 +39,10 @@ set(SOLVER_LIBS
     CACHE INTERNAL "")
 add_library(${OBJLIB_NAME} OBJECT ${SRC_FILES})
 target_compile_options(${OBJLIB_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
-target_link_libraries(${OBJLIB_NAME} PRIVATE Nektar++::nektar++ NESO::nesolib)
+target_link_libraries(${OBJLIB_NAME} PUBLIC NESO-Particles::NESO-Particles 
+  PRIVATE Nektar++::nektar++ NESO::nesolib)
 
-target_include_directories(${OBJLIB_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}
-                                                 ${NESO_PARTICLES_INCLUDE_PATH})
+target_include_directories(${OBJLIB_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 add_sycl_to_target(TARGET ${OBJLIB_NAME} SOURCES ${SRC_FILES})
 
@@ -55,14 +56,12 @@ add_executable(${EXEC_NAME} src/main.cpp $<TARGET_OBJECTS:${OBJLIB_NAME}>)
 # Compile options
 target_compile_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
 
-target_include_directories(${EXEC_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR}
-                                               ${NESO_PARTICLES_INCLUDE_PATH})
+target_include_directories(${EXEC_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 # Linker options, target libs
 target_link_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_LINK_FLAGS})
 target_link_libraries(
-  ${EXEC_NAME} PRIVATE Nektar++::nektar++ ${NESO_PARTICLES_LIBRARIES}
-                       NESO::nesolib)
+  ${EXEC_NAME} PRIVATE Nektar++::nektar++ NESO::nesolib NESO-Particles::NESO-Particles)
 
 add_sycl_to_target(TARGET ${EXEC_NAME} SOURCES src/main.cpp)
 
