--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -16,6 +16,7 @@ spack:
   repos:
   - ./repo
   - ../../NESO/NESO-Spack
+  - ../../Reactions/Reactions-repo
   - $spack/var/spack/repos/builtin
   packages:
     all:
@@ -31,6 +32,9 @@ spack:
     neso-particles:
       path: ../../NESO/neso-particles
       spec: neso-particles@working
+    reactions:
+      path: ../../Reactions
+      spec: reactions@working
     neso-tokamak:
       path: ../
       spec: neso-tokamak@working
