--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,12 @@ target_compile_options(${OBJLIB_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
 target_link_libraries(${OBJLIB_NAME} PUBLIC NESO-Particles::NESO-Particles 
   PRIVATE Nektar++::nektar++ NESO::nesolib)
 
+target_link_libraries(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/lib/libreactions.so)
+
 target_include_directories(${OBJLIB_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+
+target_include_directories(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src)
+target_include_directories(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src/reactions_lib)
 
 add_sycl_to_target(TARGET ${OBJLIB_NAME} SOURCES ${SRC_FILES})
 
@@ -58,10 +63,16 @@ target_compile_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
 
 target_include_directories(${EXEC_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
+target_include_directories(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src)
+target_include_directories(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src/reactions_lib)
+
 # Linker options, target libs
 target_link_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_LINK_FLAGS})
 target_link_libraries(
   ${EXEC_NAME} PRIVATE Nektar++::nektar++ NESO::nesolib NESO-Particles::NESO-Particles)
+
+target_link_libraries(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/lib/libreactions.so)
+
 
 add_sycl_to_target(TARGET ${EXEC_NAME} SOURCES src/main.cpp)
 
