--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -16,7 +16,7 @@ spack:
   repos:
   - ./repo
   - ../../NESO/NESO-Spack
-  - ../../Reactions/Reactions-repo
+  - ../Reactions/Reactions-repo
   - $spack/var/spack/repos/builtin
   packages:
     all:
@@ -33,7 +33,7 @@ spack:
       path: ../../NESO/neso-particles
       spec: neso-particles@working
     reactions:
-      path: ../../Reactions
+      path: ../Reactions
       spec: reactions@working
     neso-tokamak:
       path: ../
