--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -5,12 +5,17 @@
 spack:
   # add package specs to the `specs` list
   specs:
-  - neso-tokamak%gcc
+  - neso-tokamak%gcc ^adaptivecpp
+  # - neso-tokamak%oneapi ^dpcpp
   view:
     gcc-adaptivecpp:
       root: views/gcc-adaptivecpp
       select: ['%gcc']
       link_type: symlink
+    # oneapi:
+    #   root: views/oneapi
+    #   select: ['%oneapi']
+    #   link_type: symlink
   concretizer:
     unify: when_possible
   repos:
