--- a/spack/spack.yaml
+++ b/spack/spack.yaml
@@ -5,17 +5,17 @@
 spack:
   # add package specs to the `specs` list
   specs:
-  - neso-tokamak%gcc ^adaptivecpp
-  # - neso-tokamak%oneapi ^dpcpp
+  - neso-tokamak%gcc ^adaptivecpp ^neso+libonly ^neso-particles~build_tests
+  - neso-tokamak%oneapi ^dpcpp ^neso+libonly ^neso-particles~build_tests
   view:
     gcc-adaptivecpp:
       root: views/gcc-adaptivecpp
       select: ['%gcc']
       link_type: symlink
-    # oneapi:
-    #   root: views/oneapi
-    #   select: ['%oneapi']
-    #   link_type: symlink
+    oneapi:
+      root: views/oneapi
+      select: ['%oneapi']
+      link_type: symlink
   concretizer:
     unify: when_possible
   repos:
