--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,9 @@ src/ParticleSystems/ParticleSystem.cpp
 src/Misc/VariableConverter.cpp
 src/Misc/EquationOfState.cpp
 src/Misc/IdealGasEoS.cpp
+src/RiemannSolvers/TokamakSolver.cpp
 src/RiemannSolvers/MultiFieldUpwind.cpp
+src/RiemannSolvers/MultiFieldAverage.cpp
 src/ParticleSystems/ReactionSystem.cpp
 )
 
