no vorticity Braginskii

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRC_FILES
 src/EquationSystems/TokamakSystem.cpp
 src/EquationSystems/SingleDiffusiveField.cpp
 src/EquationSystems/DoubleDiffusiveField.cpp
+src/EquationSystems/ReducedBraginskii.cpp
 src/EquationSystems/ElectrostaticTurbulence.cpp
 src/BoundaryConditions/TokamakBaseBndCond.cpp
 src/BoundaryConditions/TokamakBndConds.cpp
