--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 find_package(NESO REQUIRED)
 find_package(NESO-Particles REQUIRED)
 find_package(NESO-RNG-Toolkit REQUIRED)
+find_package(VANTAGE-Reactions REQUIRED)
 
 # Identify source files
 set(SRC_FILES
@@ -51,16 +52,16 @@ set(SOLVER_LIBS
     CACHE INTERNAL "")
 add_library(${OBJLIB_NAME} OBJECT ${SRC_FILES})
 target_compile_options(${OBJLIB_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
-target_link_libraries(${OBJLIB_NAME} PUBLIC NESO-Particles::NESO-Particles 
-  PRIVATE Nektar++::nektar++ NESO::nesolib)
-
-target_link_libraries(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/lib/libreactions.so)
-target_link_libraries(${OBJLIB_NAME} PUBLIC NESO-RNG-Toolkit::NESO-RNG-Toolkit)
+target_link_libraries(${OBJLIB_NAME} 
+  PRIVATE 
+  NESO-Particles::NESO-Particles 
+  Nektar++::nektar++
+  NESO::nesolib
+  NESO-RNG-Toolkit::NESO-RNG-Toolkit
+  VANTAGE-Reactions::VANTAGE-Reactions
+)
 
 target_include_directories(${OBJLIB_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
-
-target_include_directories(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src)
-target_include_directories(${OBJLIB_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src/reactions_lib)
 
 add_sycl_to_target(TARGET ${OBJLIB_NAME} SOURCES ${SRC_FILES})
 
@@ -76,16 +77,16 @@ target_compile_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_COMPILE_FLAGS})
 
 target_include_directories(${EXEC_NAME} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
-target_include_directories(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src)
-target_include_directories(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/src/reactions_lib)
-
 # Linker options, target libs
 target_link_options(${EXEC_NAME} PRIVATE ${BUILD_TYPE_LINK_FLAGS})
-target_link_libraries(
-  ${EXEC_NAME} PRIVATE Nektar++::nektar++ NESO::nesolib NESO-Particles::NESO-Particles)
-
-target_link_libraries(${EXEC_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/Reactions/lib/libreactions.so)
-target_link_libraries(${EXEC_NAME} PUBLIC NESO-RNG-Toolkit::NESO-RNG-Toolkit)
+target_link_libraries(${EXEC_NAME} 
+  PRIVATE 
+  NESO-Particles::NESO-Particles 
+  Nektar++::nektar++
+  NESO::nesolib
+  NESO-RNG-Toolkit::NESO-RNG-Toolkit
+  VANTAGE-Reactions::VANTAGE-Reactions
+  )
 
 add_sycl_to_target(TARGET ${EXEC_NAME} SOURCES src/main.cpp)
 
